# accent_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  audio_utils.py  classifier.py  downloader.py
